fix: handle user verification and validation errors